# slamd

./: .gitignore  CMakeLists.txt  README.md  build.py  pyproject.toml
.github/workflows/: pip_publish.yml  test_python_build.yml
examples/: attractor_swarm.py  boxes.py  bunch_of_triads.py  circles.py  double_pendulum.py  drawing_2d.py  frustum_with_images.py  galaxy.py  hello_world.py  image.py  large_scale_stress_test.py  lorenz_attractor.py  lots_of_paths.py  moving_mesh.py  moving_pointcloud.py  moving_spheres.py  noisy_sphere.py  particle_vortex.py  planes.py  poly_lines.py  showcase_mesh.py  showcase_pointcloud.py  slamd  solar_system.py  spheres.py  three_d_spiral.py  torus_planar_graphs.py  transparency.py  tree_stress_test.py  triple_pendulum.py  two_windows.py
flatbuffers/: geometry.fbs  messages.fbs  visualizer.fbs
python_bindings/: CMakeLists.txt  pyproject.toml
python_bindings/src/slamd/bindings/: __init__.pyi  geom.pyi  geom2d.pyi
scripts/: record_example.sh
slamd/: CMakeLists.txt
slamd/flatb/: CMakeLists.txt
slamd/flatb/flatb/: geometry_generated.h  messages_generated.h  visualizer_generated.h
slamd/include/slamd/: constants.hpp  slamd.hpp  view.hpp  visualizer.hpp
slamd/include/slamd/geom/: arrows.hpp  box.hpp  camera_frustum.hpp  geometry.hpp  image.hpp  mesh.hpp  mono_instanced.hpp  plane.hpp  point_cloud.hpp  poly_line.hpp  sphere.hpp  spheres.hpp  triad.hpp
slamd/include/slamd/net/: client_set.hpp
slamd/include/slamd/tree/: tree.hpp
slamd/include/slamd_common/data/: image.hpp
slamd/include/slamd_common/gmath/: misc.hpp  transforms.hpp
slamd/include/slamd_window/: camera.hpp  connection.hpp  controls_hint.hpp  frame_buffer.hpp  slamd.hpp  state_manager.hpp  tree_overlay.hpp
slamd/include/slamd_window/geom/: arcball_indicator.hpp  box.hpp  geometry.hpp  image.hpp  mesh.hpp  mono_instanced.hpp  plane.hpp  point_cloud.hpp  spheres.hpp  xy_grid.hpp
slamd/include/slamd_window/tree/: node.hpp  tree.hpp  tree_path.hpp
slamd/include/slamd_window/view/: scene_view.hpp  view.hpp
slamd/shaders/mesh/: fragment_shader.frag
slamd/shaders/mono_instanced/: fragment_shader.frag
slamd/shaders/peel_composite/: fragment_shader.frag  vertex_shader.vert
slamd/shaders/point_cloud/: fragment_shader.frag  vertex_shader.vert
slamd/shaders/xy_grid/: fragment_shader.frag
slamd/src/common/gmath/: transforms.cpp
slamd/src/slamd/: view.cpp  visualizer.cpp
slamd/src/slamd/geom/: arrows.cpp  box.cpp  camera_frustum.cpp  geometry.cpp  image.cpp  mesh.cpp  mono_instanced.cpp  plane.cpp  point_cloud.cpp  poly_line.cpp  sphere.cpp  spheres.cpp  triad.cpp
slamd/src/slamd/net/: client_set.cpp  connection.cpp
slamd/src/slamd/tree/: tree.cpp
slamd/src/window/: camera.cpp  connection.cpp  controls_hint.cpp  frame_buffer.cpp  glfw.cpp  main.cpp  run_window.cpp  state_manager.cpp  tree_overlay.cpp
slamd/src/window/geom/: arcball_indicator.cpp  box.cpp  deserialize.cpp  mesh.cpp  mono_instanced.cpp  point_cloud.cpp  poly_line.cpp  spheres.cpp  triad.cpp  xy_grid.cpp
slamd/src/window/tree/: tree.cpp
slamd/src/window/view/: canvas_view.cpp  scene_view.cpp  view.cpp
src/: main.cpp
src/slamd/: __init__.py
src/slamd/_utils/: colors.py  handle_input.py
src/slamd/bindings/: __init__.pyi  _geom.pyi  _geom_types.pyi  geom.pyi  geom2d.pyi
src/slamd/geom/: __init__.py  overrides.py
tools/: build.py  build_python.py  tidy.sh
