[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "numpy>=1.23"]
build-backend = "scikit_build_core.build"

[project]
name = "slamd"
version = "2.2.0"
description = "Python bindings for SlamDunk"
authors = [{ name = "Robert Leo", email = "robert.leo.jonsson@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.23"]

[project.scripts]
slamd-window = "slamd:_window_cli"

[dependency-groups]
dev = [
    "fire>=0.7.0",
    "imageio>=2.37.0",
    "jinja2>=3.1.6",
    "numpy>=1.23",
    "pybind11>=2.13.6",
    "pybind11-stubgen>=2.5.3",
    "scikit-build-core>=0.10",
    "scipy>=1.15.2",
]

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.build-type = "MinSizeRel"
build-dir = "build/{wheel_tag}"

[tool.cibuildwheel]
skip = ["*musllinux*", "*win*", "pp*"]
