[build-system]
requires = ["scikit-build-core>=0.10", "pybind11", "numpy>=1.23"]
build-backend = "scikit_build_core.build"

[project]
name = "slamd"
version = "2.1.13"
description = "Python bindings for SlamDunk"
authors = [{ name = "Robert Leo", email = "robert.leo.jonsson@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=1.23"]

[project.scripts]
slamd-window = "slamd:_window_cli"

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.build-type = "MinSizeRel"

[tool.cibuildwheel]
skip = ["*musllinux*", "*win*", "pp*"]
